# cf-plot

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  setup.py
cfplot/: __init__.py  blockfill.py  cfplot.py  colorbar.py  contour.py  layout_runtime.py  line.py  map_runtime.py  mapping.py  oldcfplot.py  rotated_runtime.py  state.py  stipple.py  stream.py  trajectory.py  utility.py  validate.py  vector.py
cfplot/calculate/: __init__.py  calculate.py
cfplot/colour/: __init__.py  colour.py
cfplot/graphic/: __init__.py  graphic.py
cfplot/internal/: __init__.py  internal.py
cfplot/misc/: __init__.py  misc.py
cfplot/parameters/: __init__.py  parameters.py
cfplot/test/: deprecated_ah_array_comp_testing.py  test_examples.py
cfplot/utils/: __init__.py  (+1 more)
cfplot4/: cfcontour.py  cfdata.py  core.py  utils.py
docs/: .buildinfo  _bfill.html  _bfill_ugrid.html  _cf_data_assign.html  _check_data.html  _cscale_get_map.html  _dim_titles.html  _gvals.html  _map_title.html  _mapaxis.html  _plot_map_axes.html  _process_color_scales.html  _set_map.html  _supscr.html  _timeaxis.html  add_cyclic.html  advanced.html  api_reference.html  axes.html  axes_plot.html  calculate_levels.html  cbar.html  cf_var_name.html  colour_scales.html  compare_arrays.html  compare_images.html  con.html  cscale.html  cylindrical.html  find_pos_in_array.html  fix_floats.html  gallery_of_examples.html  gclose.html  genindex.html  gopen.html  gpos.html  graphs.html  gset.html  hovmuller.html  index.html  (+56 more)
tests/: conftest.py  test_canari.py  test_contour_factory.py  test_realdata.py
(+334 files in other folders)
